--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
     "jestu": "jest -u"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "babel-core": "6.26.3",
     "babel-preset-env": "1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-react": "6.24.1",
     "jest": "23.1.0",
     "jshint": "2.9.5",
     "parcel-bundler": "1.8.1",
     "react": "16.4.0",
     "react-dom": "16.4.0",
-    "shx": "^0.2.2"
+    "react-redux": "5.0.7",
+    "redux": "4.0.0",
+    "shx": "0.2.2"
   },
   "dependencies": {
     "deep-diff": "1.0.1",
