--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "scripts": {
     "w": "parcel index.html",
-    "b": "shx rm ./dist/* & parcel build ./rcl/index.js --out-file rcl.js --detailed-report& shx cp ./rcl/babelPlugin.js ./dist/rcl-babel-plugin.js",
-    "jestu": "jest -u"
+    "b": "shx rm ./dist/* & parcel build ./rcl/index.js --out-file rcl.js --detailed-report& shx cp ./rcl/babelPlugin.js ./dist/rcl-babel-plugin.js"
   },
   "devDependencies": {
     "babel-core": "6.26.3",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
+    "babel-template": "^6.26.0",
     "jest": "23.1.0",
     "jshint": "2.9.5",
     "parcel-bundler": "1.8.1",
