--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "babel-core": "6.26.3",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
-    "babel-template": "^6.26.0",
+    "babel-template": "6.26.0",
     "jest": "23.1.0",
     "jshint": "2.9.5",
     "parcel-bundler": "1.8.1",
